Added directories for images and other html pages for neater files

--- a/index.html
+++ b/index.html
@@ -3,29 +3,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My First Website</title>
+        <title>Sam's Movies</title>
     </head>
     <body>
-        <h1>Hello, World!</h1>
+        <h1>Home Page</h1>
         <!-- This is a comment that is not going to show up in the website, only in the code -->
-        <p>This is just some random ass text to test the html thing</p>
-        <p>
-            <em>
-                This is another one of those tests...
-            </em>
-            <strong>
-                move along...
-            </strong>
-        </p>
-        <h1>
-             Starting here, this is my draft for sam's movie blog
-        </h1>
+        <a href="./pages/about.html">About</a>
+        <h2><a href="https://boxd.it/UJv7">My letterboxd</a></h2>
         <h2> 
             My Favorite movies: 
         </h2>
         <ol>
             <li>
-                <h3> Movie 1 </h3>
+                <h3> Parasite (2019) </h3>
+                <img src="../images/parasite_poster.jpg" alt="Parasite Movie Poster">
             </li>
             <li>
                 <h3> Movie 2 </h3>
