Changed images to img in code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ol>
             <li>
                 <h3> Parasite (2019) </h3>
-                <img src="../images/parasite_poster.jpg" alt="Parasite Movie Poster">
+                <img src="../img/parasite_poster.jpg" alt="Parasite Movie Poster">
             </li>
             <li>
                 <h3> Movie 2 </h3>
