--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css"
+        <link rel="stylesheet" href="styles.css">
         <title>Sam's Movies</title>
     </head>
     <body>
-        <h1>Home Page</h1>
+        <div class="header">
+            <img src="/img/samsiteheader.png" sizes="width= 1920; height=1080">
+        <h1 style="color:olive; background-color: black; font-family: monospace; text-align: center;">Sam's Movies</h1>
         <!-- This is a comment that is not going to show up in the website, only in the code -->
-        <a href="./pages/about.html">About</a>
-        <h2><a href="https://boxd.it/UJv7">My letterboxd</a></h2>
-        <h2> 
+        <!-- I only added this little bit of css into the html because they said to avoid but I still wanted to practice it to get to know it, the rest is in the styles.css file-->
+        <a class="pages" href="./pages/about.html">About</a>
+        <h2><a id="letterboxd" href="https://boxd.it/UJv7">My letterboxd</a></h2>
+        </div>
+        <h2 class="section-header"> 
             My Favorite movies: 
         </h2>
         <ol>
@@ -26,7 +30,7 @@
                 <h3> Movie 3</h3>
             </li>
         </ol>
-        <h2>
+        <h2 class="section-header">
             The Worst Movies (In No Particular Order):
         </h>
         <ul>
