--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <title>Sam's Movies</title>
     </head>
     <body>
-        <div class="header">
-            <img src="/img/samsiteheader.png" sizes="width= 1920; height=1080">
+        <div class="odintest">LMFAOOOOOOOOOOOOOOOOOOOOO</div>
+        <img src="/img/samsiteheader.png">
         <h1 style="color:olive; background-color: black; font-family: monospace; text-align: center;">Sam's Movies</h1>
         <!-- This is a comment that is not going to show up in the website, only in the code -->
         <!-- I only added this little bit of css into the html because they said to avoid but I still wanted to practice it to get to know it, the rest is in the styles.css file-->
         <a class="pages" href="./pages/about.html">About</a>
         <h2><a id="letterboxd" href="https://boxd.it/UJv7">My letterboxd</a></h2>
-        </div>
         <h2 class="section-header"> 
             My Favorite movies: 
         </h2>
