Tested CSS and changed header design a little bit

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Sam's Movies</title>
     </head>
     <body>
-        <img src="/img/samsiteheader.png">
-        <h1 style="color:olive; background-color: black; font-family: monospace; text-align: center;">Sam's Movies</h1>
+        <div class="header">  Sam's Movies </div>
+        <h1 style="color:olivedrab; background-color: black; font-family: monospace; text-align: center; margin-top: 0px;">s</h1>
         <!-- This is a comment that is not going to show up in the website, only in the code -->
         <!-- I only added this little bit of css into the html because they said to avoid but I still wanted to practice it to get to know it, the rest is in the styles.css file-->
         <a class="pages" href="./pages/about.html">About</a>
