Changed header / nav bar design

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
         <title>Sam's Movies</title>
     </head>
     <body>
-        <img class="headerimg" src="/img/samsiteheader.png">
-        <h1 class="mainheader">Sam's Movies</h1>
-        <a class="pages" href="./pages/about.html">About</a>
-        <h2><a id="letterboxd" href="https://boxd.it/UJv7">My letterboxd</a></h2>
+        <nav class="header-group">
+            <div class="mainheader">
+                <h1> Sam's Movies </h1>
+            </div>
+            <ul>
+                <li><a class="pages" href="./pages/about.html">About</a></li>
+                <li><a id="letterboxd" href="https://boxd.it/UJv7">My letterboxd</a></li>
+                <li><a href="">Placeholder</a></li>
+                <li><a href="">Placeholder</a></li>
+            </ul>
+        </nav>
         <h2 class="section-header"> 
             My Favorite movies: (test)
         </h2>
@@ -28,7 +35,7 @@
         </ol>
         <h2 class="section-header">
             The Worst Movies (In No Particular Order):
-        </h>
+        </h2>
         <ul>
             <li>
                 <h3> Movie 1 </h3>
