Nav bar desing tests

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Sam's Movies</title>
     </head>
     <body>
+        <div class="stripes">
+        <p>test</p>
+        </div>
         <nav class="header-group">
             <div class="mainheader">
                 <h1> Sam's Movies </h1>
@@ -18,6 +21,8 @@
                 <li><a href="">Placeholder</a></li>
             </ul>
         </nav>
+        <div class="stripes">
+        </div>
         <h2 class="section-header"> 
             My Favorite movies: (test)
         </h2>
