Letterboxd now opens in new tab

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <ul>
                 <li><a class="pages" href="./pages/about.html">About</a></li>
-                <li><a id="letterboxd" href="https://boxd.it/UJv7">My letterboxd</a></li>
+                <li><a id="letterboxd" href="https://boxd.it/UJv7" target="_blank">My letterboxd</a></li>
                 <li><a href="">Placeholder</a></li>
                 <li><a href="">Placeholder</a></li>
             </ul>
