--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
-        <title>Sam's Movies</title>
+        <title>The Movie Sam-urai</title>
     </head>
     <body>
         <nav class="header-group">
             <div class="mainheader">
-                <h1> Sam's Movies </h1>
+                <h1> The Movie Sam-urai </h1>
             </div>
             <ul>
                 <li><a class="pages" href="./pages/about.html">About</a></li>
