Added two more imgs with respective shadows for decoration

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
             </div>
             <div class="shadow"></div>
         </div>
+        <div  class="tvdeco-container" >
+            <div class="tvs-decoration">
+                <img src="img/blackopszombies-menu.jpeg" style="height: 300px;">
+            </div>
+            <div class="shadow-tv"></div>
+        </div>
+        <div  class="falllenang-container" >
+            <div class="fallenang-img">
+                <img src="img/fallen-angels.jpeg" style="height: 400px;">
+            </div>
+            <div class="shadow-fallenang"></div>
+        </div>
 
         <div class="month-movie"><img src="/img/parasite_poster.jpg" style="height: 400px;"></div> 
         
